--- a/CloudCore.html
+++ b/CloudCore.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'
+        integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z' crossorigin='anonymous'>
     <style>
         .container {
             max-width: 500px;
@@ -40,19 +40,19 @@
 </head>
 
 <body>
-    <div class="container mt-5">
-        <!--HEADER---Create a Title that says "CloudCore" with download button-->
-        <h1 class="title-text">
-            CloudCore <button id="downloadButton" class="btn-white down-btn">
+    <div class='container mt-5'>
+        <!--HEADER---Create a Title that says 'CloudCore' with download button-->
+        <h1 class='title-text'>
+            CloudCore <button id='downloadButton' class='btn-white down-btn'>
                 Free Download</button>
         </h1>
         <script>
-            var downloadButton = document.getElementById("downloadButton");
-            downloadButton.addEventListener("click", function () {
+            var downloadButton = document.getElementById('downloadButton');
+            downloadButton.addEventListener('click', function () {
                 var html = document.documentElement.outerHTML;
-                var filename = "CloudCore_v1.html";
-                var blob = new Blob([html], { type: "text/html" });
-                var a = document.createElement("a");
+                var filename = 'CloudCore_v1.html';
+                var blob = new Blob([html], { type: 'text/html' });
+                var a = document.createElement('a');
                 a.href = URL.createObjectURL(blob);
                 a.download = filename;
                 a.click();
@@ -62,43 +62,65 @@
 
 
     <!--CONTROLS-->
-    <div class="container mt-5">
-        <div id="container"></div>
+    <div class='container mt-5'>
+        <!--a slider that controls the beats per minute-->
+        <div class='p-3 mb-2 bg-light text-dark border border-dark'>
+            <label class='bpm-heading'>Beats Per Minute</label>
+            <input type='range' class='bpm-slider form-control-range' min='1' max='200' step='1' value='50'>
+            <span class='bpm-value badge badge-light'></span>
+        </div>
+        <script>
+            var bpmSlider = document.querySelector('.bpm-slider');
+            var bpmValue = document.querySelector('.bpm-value');
+            bpmValue.innerHTML = bpmSlider.value;
+            bpmSlider.addEventListener('input', function () {
+                bpmValue.innerHTML = this.value;
+            });
+        </script>
+        <div id='container'></div>
         <!--a drop down menu that gives you a list of modules to add-->
-        <select class="mod-selector">
-            <option value="simp">Simp</option>
-            <option value="dimp">Dimp</option>
-            <option value="fimp">Fimp</option>
-            <option value="gimp">Gimp</option>
+        <select class='mod-selector'>
+            <option value='simp'>Simp</option>
+            <option value='dimp'>Dimp</option>
+            <option value='fimp'>Fimp</option>
+            <option value='gimp'>Gimp</option>
         </select>
-        <button id="addButton">Add</button>
-        <button id="removeButton">Remove</button>
+        <button id='addButton'>Add</button>
+        <button id='removeButton'>Remove</button>
         <script>
             class Divs {
                 constructor() {
                     this.divs = [];
                 }
                 create() {
+                    var selector = document.querySelector('.mod-selector');
+                    var selectedOption = selector.value;
                     var newDiv;
-                    if (document.getElementById("mod-selector").value == "simp") { newDiv = templateOne(); }
-                    if (document.getElementById("mod-selector").value == "dimp") { newDiv = templateTwo(); }
-                    if (document.getElementById("mod-selector").value == "fimp") { newDiv = templateThree(); }
-                    if (document.getElementById("mod-selector").value == "gimp") { newDiv = templateFour(); }
+                    if (selectedOption === 'simp') {
+                        newDiv = templateOne();
+                    } else if (selectedOption === 'dimp') {
+                        newDiv = templateTwo();
+                    } else if (selectedOption === 'fimp') {
+                        newDiv = templateThree();
+                    } else if (selectedOption === 'gimp') {
+                        newDiv = templateFour();
+                    }
                     this.divs.push(newDiv);
-                    document.getElementById("container").appendChild(newDiv);
+                    document.getElementById('container').appendChild(newDiv);
                 }
+
                 remove() {
                     var lastDiv = this.divs.pop();
                     lastDiv.remove();
                 }
             }
             var divs = new Divs();
-            var addButton = document.getElementById("addButton");
-            addButton.addEventListener("click", function () {
+            var addButton = document.getElementById('addButton');
+            addButton.addEventListener('click', function () {
                 divs.create();
             });
-            var removeButton = document.getElementById("removeButton");
-            removeButton.addEventListener("click", function () {
+            var removeButton = document.getElementById('removeButton');
+            removeButton.addEventListener('click', function () {
                 divs.remove();
             });
         </script>
@@ -107,14 +129,112 @@
     <!--MODULES-->
     <script>
         function templateOne() {
-            var div = document.createElement("div");
-            div.style.height = "50px";
-            div.style.width = "50px";
-            div.style.backgroundColor = "red";
-            div.style.margin = "10px";
+            var div = document.createElement('div');
+            var htmlString = "<div class='container mt-5'>" +
+                "<select class='form-control'>" +
+                "<option value='sine'>Sine</option>" +
+                "<option value='square'>Square</option>" +
+                "<option value='sawtooth'>Sawtooth</option>" +
+                "<option value='triangle'>Triangle</option>" +
+                "</select>" +
+                "<input type='text' class='form-control' placeholder='Type your notes here (separate with commas)'>" +
+                "<button class='btn btn-primary mt-3'>" +
+                "<svg width='1em' height='1em' viewBox='0 0 16 16' class='bi bi-play' fill='currentColor' xmlns='http://www.w3.org/2000/svg'>" +
+                "<path fill-rule='evenodd' d='M10.804 8L5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z' />" +
+                "</svg>Play" +
+                "</button>" +
+                "<button class='btn btn-danger mt-3'>" +
+                "<svg width='1em' height='1em' viewBox='0 0 16 16' class='bi bi-stop' fill='currentColor' xmlns='http://www.w3.org/2000/svg'>" +
+                "<path fill-rule='evenodd' d='M4 4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4z' />" +
+                "</svg>Stop" +
+                "</button>" +
+                "<button class='loop-btn btn btn-success mt-3'>" +
+                "Loop<span class='badge badge-light'>Off</span>" +
+                "</button>" +
+                "<div class='mt-3'></div>" +
+                "</div>";
+            div.innerHTML = htmlString;
+            div.style.border = '1px solid black';
+            div.style.backgroundColor = '#d3d3d3';
             return div;
         }
 
+        function templateTwo() {
+            var div = document.createElement('div');
+            div.style.height = '50px';
+            div.style.width = '50px';
+            div.style.backgroundColor = 'black';
+            div.style.margin = '10px';
+            return div;
+        }
+        function templateThree() {
+            var div = document.createElement('div');
+            div.style.height = '50px';
+            div.style.width = '50px';
+            div.style.backgroundColor = 'blue';
+            div.style.margin = '10px';
+            return div;
+        }
+        function templateFour() {
+            var div = document.createElement('div');
+            div.style.height = '50px';
+            div.style.width = '50px';
+            div.style.backgroundColor = 'green';
+            div.style.margin = '10px';
+            return div;
+        }
+    </script>
+    <!--END MODULES-->
+    <!--SUPPORTING SCRIPT FOR TEMP 1-->
+
+    <script>
+        const notes = {
+            'C': 261.63,
+            'C#': 277.18,
+            'D': 293.66,
+            'D#': 311.13,
+            'E': 329.63,
+            'F': 349.23,
+            'F#': 369.99,
+            'G': 392.00,
+            'G#': 415.30,
+            'A': 440.00,
+            'A#': 466.16,
+            'B': 493.88
+        };
+        let note_length = 1;
+
+        function play(x) {
+            const audioCtx = new AudioContext();
+            const oscillator = audioCtx.createOscillator();
+            const gainNode = audioCtx.createGain();
+            oscillator.frequency.value = notes[x];
+            oscillator.connect(gainNode);
+            gainNode.connect(audioCtx.destination);
+            const oscillator_type = "sine"
+            oscillator.type = oscillator_type;
+            oscillator.start();
+            setTimeout(() => {
+                oscillator.stop();
+            }, note_length * 1000);
+        }
+
+        document.querySelector('button').addEventListener('click', () => {
+            const input = document.querySelector('input').value;
+            const notes = input.split(',');
+            const bpm = document.querySelector('.bpm-slider').value;
+            note_length = 60 / bpm;
+            notes.forEach((note, index) => {
+                setTimeout(() => {
+                    play(note);
+                }, index * note_length * 1000);
+            });
+        });
+
+        document.querySelectorAll('button')[1].addEventListener('click', () => {
+            const audioCtx = new AudioContext();
+            audioCtx.close();
+        });
     </script>
 </body>
 
