--- a/CloudCore.html
+++ b/CloudCore.html
@@ -139,14 +139,10 @@
                 "</select>" +
                 "<input type='text' class='form-control' placeholder='Type your notes here (separate with commas)'>" +
                 "<button class='btn btn-primary mt-3'>" +
-                "<svg width='1em' height='1em' viewBox='0 0 16 16' class='bi bi-play' fill='currentColor' xmlns='http://www.w3.org/2000/svg'>" +
-                "<path fill-rule='evenodd' d='M10.804 8L5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z' />" +
-                "</svg>Play" +
+                "Play" +
                 "</button>" +
                 "<button class='btn btn-danger mt-3'>" +
-                "<svg width='1em' height='1em' viewBox='0 0 16 16' class='bi bi-stop' fill='currentColor' xmlns='http://www.w3.org/2000/svg'>" +
-                "<path fill-rule='evenodd' d='M4 4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4z' />" +
-                "</svg>Stop" +
+                "Stop" +
                 "</button>" +
                 "<button class='loop-btn btn btn-success mt-3'>" +
                 "Loop<span class='badge badge-light'>Off</span>" +
