--- a/CloudCore.html
+++ b/CloudCore.html
@@ -61,22 +61,8 @@
     </div>
 
 
-    <!--CONTROLS-->
+    <!--MAIN UI-->
     <div class='container mt-5'>
-        <!--a slider that controls the beats per minute-->
-        <div class='p-3 mb-2 bg-light text-dark border border-dark'>
-            <label class='bpm-heading'>Beats Per Minute</label>
-            <input type='range' class='bpm-slider form-control-range' min='1' max='200' step='1' value='50'>
-            <span class='bpm-value badge badge-light'></span>
-        </div>
-        <script>
-            var bpmSlider = document.querySelector('.bpm-slider');
-            var bpmValue = document.querySelector('.bpm-value');
-            bpmValue.innerHTML = bpmSlider.value;
-            bpmSlider.addEventListener('input', function () {
-                bpmValue.innerHTML = this.value;
-            });
-        </script>
         <div id='container'></div>
         <!--a drop down menu that gives you a list of modules to add-->
         <select class='mod-selector'>
@@ -87,69 +73,284 @@
         </select>
         <button id='addButton'>Add</button>
         <button id='removeButton'>Remove</button>
-        <script>
-            class Divs {
-                constructor() {
-                    this.divs = [];
-                }
-                create() {
-                    var selector = document.querySelector('.mod-selector');
-                    var selectedOption = selector.value;
-                    var newDiv;
-                    if (selectedOption === 'simp') {
-                        newDiv = templateOne();
-                    } else if (selectedOption === 'dimp') {
-                        newDiv = templateTwo();
-                    } else if (selectedOption === 'fimp') {
-                        newDiv = templateThree();
-                    } else if (selectedOption === 'gimp') {
-                        newDiv = templateFour();
-                    }
-                    this.divs.push(newDiv);
-                    document.getElementById('container').appendChild(newDiv);
-                }
-
-                remove() {
-                    var lastDiv = this.divs.pop();
-                    lastDiv.remove();
-                }
-            }
-            var divs = new Divs();
-            var addButton = document.getElementById('addButton');
-            addButton.addEventListener('click', function () {
-                divs.create();
-            });
-            var removeButton = document.getElementById('removeButton');
-            removeButton.addEventListener('click', function () {
-                divs.remove();
-            });
-        </script>
     </div>
+
+    <!--MAIN UI SCRIPT-->
+    <script>
+        class Divs {
+            constructor() {
+                this.divs = [];
+                this.audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+                this.isPlaying = false;
+            }
+            create() {
+                var selector = document.querySelector('.mod-selector');
+                var selectedOption = selector.value;
+                var newDiv;
+                if (selectedOption === 'simp') {
+                    newDiv = templateOne();
+                } else if (selectedOption === 'dimp') {
+                    newDiv = templateTwo();
+                } else if (selectedOption === 'fimp') {
+                    newDiv = templateThree();
+                } else if (selectedOption === 'gimp') {
+                    newDiv = templateFour();
+                }
+                this.divs.push(newDiv);
+                document.getElementById('container').appendChild(newDiv);
+
+                // Add event listeners for play and stop buttons
+                var playButton = newDiv.querySelector('.play-btn');
+                var stopButton = newDiv.querySelector('.stop-btn');
+                playButton.addEventListener('click', this.play.bind(this));
+                stopButton.addEventListener('click', this.stop.bind(this));
+            }
+
+            remove() {
+                var lastDiv = this.divs.pop();
+                lastDiv.remove();
+            }
+        }
+        var divs = new Divs();
+        var addButton = document.getElementById('addButton');
+        addButton.addEventListener('click', function () {
+            divs.create();
+        });
+        var removeButton = document.getElementById('removeButton');
+        removeButton.addEventListener('click', function () {
+            divs.remove();
+        });
+    </script>
 
     <!--MODULES-->
     <script>
         function templateOne() {
             var div = document.createElement('div');
-            var htmlString = "<div class='container mt-5'>" +
-                "<select class='form-control'>" +
-                "<option value='sine'>Sine</option>" +
-                "<option value='square'>Square</option>" +
-                "<option value='sawtooth'>Sawtooth</option>" +
-                "<option value='triangle'>Triangle</option>" +
-                "</select>" +
-                "<input type='text' class='form-control' placeholder='Type your notes here (separate with commas)'>" +
-                "<button class='btn btn-primary mt-3'>" +
-                "Play" +
-                "</button>" +
-                "<button class='btn btn-danger mt-3'>" +
-                "Stop" +
-                "</button>" +
-                "<button class='loop-btn btn btn-success mt-3'>" +
-                "Loop<span class='badge badge-light'>Off</span>" +
-                "</button>" +
-                "<div class='mt-3'></div>" +
-                "</div>";
-            div.innerHTML = htmlString;
+
+            // create a spacer div
+            var spacer = document.createElement('div');
+            spacer.classList.add('spacer');
+            spacer.style.height = '10px';
+            div.appendChild(spacer);
+
+            // Play button
+            var playButton = document.createElement('button');
+            playButton.classList.add('play-btn');
+            playButton.innerHTML = 'Play';
+            div.appendChild(playButton);
+
+            // Stop button
+            var stopButton = document.createElement('button');
+            stopButton.classList.add('stop-btn');
+            stopButton.innerHTML = 'Stop';
+            div.appendChild(stopButton);
+
+            // create a spacer div
+            var spacer = document.createElement('div');
+            spacer.classList.add('spacer');
+            // make the high div 10px tall
+            spacer.style.height = '10px';
+            div.appendChild(spacer);
+
+            // Create an Oscillator type selector
+            var oscSelector = document.createElement('select');
+            oscSelector.classList.add('osc-selector');
+            var oscTypes = ['sine', 'square', 'sawtooth', 'triangle'];
+            for (var i = 0; i < oscTypes.length; i++) {
+                var option = document.createElement('option');
+                option.value = oscTypes[i];
+                option.innerHTML = oscTypes[i];
+                oscSelector.appendChild(option);
+            }
+            // append oscSelector to div
+            div.appendChild(oscSelector);
+
+            // Notes input field
+            var notesInput = document.createElement('input');
+            notesInput.classList.add('notes-input');
+            notesInput.type = 'text';
+            notesInput.placeholder = 'Enter notes here...';
+            // append notesInput to div
+            div.appendChild(notesInput);
+
+            // create a spacer div
+            var spacer = document.createElement('div');
+            spacer.classList.add('spacer');
+            spacer.style.height = '10px';
+            div.appendChild(spacer);
+
+            // create a simple label that says 'Volume:'
+            var volumeLabel = document.createElement('label');
+            volumeLabel.classList.add('volume-label');
+            volumeLabel.innerHTML = 'Volume:   ';
+            div.appendChild(volumeLabel);
+
+            // Volume slider
+            var volumeSlider = document.createElement('input');
+            volumeSlider.classList.add('volume-slider');
+            volumeSlider.type = 'range';
+            volumeSlider.min = '0';
+            volumeSlider.max = '1';
+            volumeSlider.step = '0.01';
+            volumeSlider.value = '0.5';
+            volumeSlider.innerHTML = volumeSlider.value;
+            div.appendChild(volumeSlider);
+
+            // create a label with a number that shows the current volume
+            var volumeLabel = document.createElement('label');
+            volumeLabel.classList.add('volume-label');
+            volumeLabel.innerHTML = volumeSlider.value;
+            div.appendChild(volumeLabel);
+            // update the volume label when the slider is moved
+            volumeSlider.addEventListener('input', function () {
+                volumeLabel.innerHTML = volumeSlider.value;
+            });
+
+            // create a spacer div
+            var spacer = document.createElement('div');
+            spacer.classList.add('spacer');
+            div.appendChild(spacer);
+
+            // create a simple label that says 'BPM:'
+            var bpmLabel = document.createElement('label');
+            bpmLabel.classList.add('bpm-label');
+            bpmLabel.innerHTML = 'BPM:   ';
+            div.appendChild(bpmLabel);
+
+            // BPM slider
+            var bpmSlider = document.createElement('input');
+            bpmSlider.classList.add('bpm-slider');
+            bpmSlider.type = 'range';
+            bpmSlider.min = '1';
+            bpmSlider.max = '200';
+            bpmSlider.step = '1';
+            bpmSlider.value = '50';
+            div.appendChild(bpmSlider);
+
+            // create a label with a number that shows the current BPM
+            var bpmLabel = document.createElement('label');
+            bpmLabel.classList.add('bpm-label');
+            bpmLabel.innerHTML = bpmSlider.value;
+            div.appendChild(bpmLabel);
+            // update the BPM label when the slider is moved
+            bpmSlider.addEventListener('input', function () {
+                bpmLabel.innerHTML = bpmSlider.value;
+            });
+
+            // dictionary of notes and their frequencies
+            const notes = {
+                'C': 261.63,
+                'C#': 277.18,
+                'D': 293.66,
+                'D#': 311.13,
+                'E': 329.63,
+                'F': 349.23,
+                'F#': 369.99,
+                'G': 392.00,
+                'G#': 415.30,
+                'A': 440.00,
+                'A#': 466.16,
+                'B': 493.88
+            };
+
+            // set the note length to 0.25 seconds by default
+            let note_length = 1;
+
+            //create a function that plays a note for a certain note_length THEN stops the note
+            function play(x) {
+                const audioCtx = new AudioContext();
+                const oscillator = audioCtx.createOscillator();
+                const gainNode = audioCtx.createGain();
+                oscillator.frequency.value = notes[x];
+                oscillator.connect(gainNode);
+                gainNode.connect(audioCtx.destination);
+                // get the value of the oscillator type
+                const oscillator_type = document.querySelector('select').value;
+                oscillator.type = oscillator_type;
+                oscillator.start();
+                setTimeout(() => {
+                    oscillator.stop();
+                }, note_length * 1000);
+            }
+
+            // PLAY BUTTON
+            playButton.addEventListener('click', () => {
+                // get the value of the input field
+                const input = document.querySelector('input').value;
+                // split the input into an array of notes
+                const notes = input.split(' ');
+                // get the value of the bpm slider
+                const bpm = document.querySelector('.bpm-slider').value;
+                // calculate the note length
+                note_length = 60 / bpm;
+                // loop through the notes array and play each note ONE AT A TIME
+                notes.forEach((note, index) => {
+                    setTimeout(() => {
+                        play(note);
+                    }, index * note_length * 1000);
+                });
+            });
+
+            // STOP BUTTON
+            stopButton.addEventListener('click', () => {
+                // IF THERE IS ANY AUDIO PLAYING STOP IT
+                const audioCtx = new AudioContext();
+                audioCtx.close();
+            });
+
+            // create a spacer div
+            var spacer = document.createElement('div');
+            spacer.classList.add('spacer');
+            div.appendChild(spacer);
+
+            // create a loop button
+            var loopButton = document.createElement('button');
+            loopButton.classList.add('loop-button');
+            loopButton.innerHTML = 'Loop';
+            div.appendChild(loopButton);
+
+            // LOOP BUTTON
+            loopButton.addEventListener('click', () => {
+                // do what the play button does but in a while loop that runs forever until the stop button is pressed
+                const input = document.querySelector('input').value;
+                const notes = input.split(' ');
+                const bpm = document.querySelector('.bpm-slider').value;
+                note_length = 60 / bpm;
+                // create a variable to keep track of the index
+                let index = 0;
+                // create a variable to keep track of the loop
+                let loop = true;
+                // create a variable to keep track of the interval
+                let interval;
+                // create a function that plays the notes
+                function playNotes() {
+                    play(notes[index]);
+                    index++;
+                    if (index === notes.length) {
+                        index = 0;
+                    }
+                }
+                // create a function that starts the loop
+                function startLoop() {
+                    interval = setInterval(playNotes, note_length * 1000);
+                }
+                // create a function that stops the loop
+                function stopLoop() {
+                    clearInterval(interval);
+                }
+                // start the loop
+                startLoop();
+                // stop the loop when the stop button is pressed
+                stopButton.addEventListener('click', () => {
+                    stopLoop();
+                });
+            });
+
+            // Div styling
+            div.style.height = '200px';
+            div.style.width = '400px';
+            div.style.margin = '0 auto';
+            div.style.marginTop = '10px';
             div.style.border = '1px solid black';
             div.style.backgroundColor = '#d3d3d3';
             return div;
@@ -181,57 +382,6 @@
         }
     </script>
     <!--END MODULES-->
-    <!--SUPPORTING SCRIPT FOR TEMP 1-->
-
-    <script>
-        const notes = {
-            'C': 261.63,
-            'C#': 277.18,
-            'D': 293.66,
-            'D#': 311.13,
-            'E': 329.63,
-            'F': 349.23,
-            'F#': 369.99,
-            'G': 392.00,
-            'G#': 415.30,
-            'A': 440.00,
-            'A#': 466.16,
-            'B': 493.88
-        };
-        let note_length = 1;
-
-        function play(x) {
-            const audioCtx = new AudioContext();
-            const oscillator = audioCtx.createOscillator();
-            const gainNode = audioCtx.createGain();
-            oscillator.frequency.value = notes[x];
-            oscillator.connect(gainNode);
-            gainNode.connect(audioCtx.destination);
-            const oscillator_type = "sine"
-            oscillator.type = oscillator_type;
-            oscillator.start();
-            setTimeout(() => {
-                oscillator.stop();
-            }, note_length * 1000);
-        }
-
-        document.querySelector('button').addEventListener('click', () => {
-            const input = document.querySelector('input').value;
-            const notes = input.split(',');
-            const bpm = document.querySelector('.bpm-slider').value;
-            note_length = 60 / bpm;
-            notes.forEach((note, index) => {
-                setTimeout(() => {
-                    play(note);
-                }, index * note_length * 1000);
-            });
-        });
-
-        document.querySelectorAll('button')[1].addEventListener('click', () => {
-            const audioCtx = new AudioContext();
-            audioCtx.close();
-        });
-    </script>
 </body>
 
 </html>
