--- a/0_Dev_Version/cloudcore.html
+++ b/0_Dev_Version/cloudcore.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>CloudCore</title>
-    <link rel="stylesheet" href="/css/cloudcore.css">
-    <script src="/js/cloudcore.js" defer></script>
+    <link rel="stylesheet" href="cloudcore.css">
+    <script src="cloudcore.js" defer></script>
 </head>
 
 <body>
